--- a/app/client/src/locales/de.json
+++ b/app/client/src/locales/de.json
@@ -3,7 +3,7 @@
   "Browse": "Durchsuchen",
   "Library": "Mediathek",
   "Tracks": "Titel",
-  "Playlists": "Wiedergabelisten",
+  "Playlists": "Playlisten",
   "Albums": "Alben",
   "Artists": "Künstler",
   "More": "Mehr",
@@ -22,7 +22,7 @@
   "Stream logging is disabled!": "Streamprotokollierung ist deaktiviert!",
   "Enable it in settings for history to work properly.": "Aktiviere es in den Einstellungen, damit der Verlauf korrekt funktioniert.",
   "History": "Verlauf",
-  "Create new playlist": "Neue Wiedergabeliste erstellen",
+  "Create new playlist": "Neue Playlist erstellen",
   "TRACKS": "Titel",
   "Sort by": "Sortieren nach",
   "Date Added": "Hinzugefügt am",
@@ -30,15 +30,15 @@
   "Artist (A-Z)": "Künstler (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
   "Error loading lyrics or lyrics not found!": "Fehler beim Laden der Songtexte oder Songtexte nicht gefunden!",
-  "Create playlist": "Wiedergabeliste erstellen",
+  "Create playlist": "Playlist erstellen",
   "Create": "Erstellen",
-  "Add to playlist": "Zur Wiedergabeliste hinzufügen",
+  "Add to playlist": "Zur Playlist hinzufügen",
   "Create new": "Neu erstellen",
   "Remove": "Entfernen",
   "Play next": "Als nächstes spielen",
   "Add to queue": "Zur Warteschleife hinzufügen",
   "Remove from library": "Aus der Mediathek entfernen",
-  "Remove from playlist": "Aus Wiedergabeliste entfernen",
+  "Remove from playlist": "Aus Playlist entfernen",
   "Play track mix": "Track Mix abspielen",
   "Go to": "Gehe zu",
   "Track Mix": "Track Mix",
@@ -46,7 +46,7 @@
   "Released": "Veröffentlicht",
   "Disk": "Disk",
   "albums": "Alben",
-  "Play top": "Play top",
+  "Play top": "Top abspielen",
   "Radio": "Radio",
   "Show all albums": "Zeige alle Alben",
   "Show all singles": "Zeige alle Singles",
@@ -108,5 +108,17 @@
   "Don't minimize to tray": "Nicht in Statusleiste minimieren",
   "Close on exit": "Beim Beenden schließen",
   "Settings saved!": "Einstellungen gespeichert!",
-  "Available only in Electron version!": "Nur in der Electron-Version verfügbar!"
+  "Available only in Electron version!": "Nur in der Electron-Version verfügbar!",
+  "Crossfade (ms)": "Überblendung (ms)",
+  "Select primary color": "Primärfarbe auswählen",
+  "Light theme": "Helles Thema",
+  "Create folders for playlists": "Ordner für Wiedergabelisten erstellen",
+  "About": "Über",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram-Releases",
+  "Telegram Group": "Telegram Gruppe",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android-Gruppe",
+  "Credits:": "Credits:",
+  "Agree": "Einverstanden"
 }
