--- a/app/client/src/locales/el.json
+++ b/app/client/src/locales/el.json
@@ -1,112 +1,124 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
-  "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Home": "Αρχική",
+  "Browse": "Περιήγηση",
+  "Library": "Βιβλιοθήκη",
+  "Tracks": "Κομμάτια",
+  "Playlists": "Λίστες αναπαραγωγής",
+  "Albums": "Album",
+  "Artists": "Καλλιτέχνες",
+  "More": "Περισσότερα",
+  "Settings": "Ρυθμίσεις",
+  "Downloads": "Λήψεις",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Αναζήτηση ή επικόλληση διεύθυνσης URL Deezer. Χρησιμοποιήστε το \"/\" για γρήγορη εστίαση.",
+  "Play": "Αναπαραγωγή",
+  "Add to library": "Προσθήκη στη βιβλιοθήκη",
+  "Download": "Λήψη",
+  "fans": "θαυμαστές",
+  "tracks": "κομμάτια",
+  "Quality": "Ποιότητα",
+  "Estimated size:": "Εκτιμώμενος χρόνος:",
+  "Start downloading": "Έναρξη λήψης",
+  "Cancel": "Άκυρο",
+  "Stream logging is disabled!": "Η καταγραφή ροής είναι ανενεργή!",
+  "Enable it in settings for history to work properly.": "Ενεργοποιήστε το στις ρυθμίσεις για την σωστή λειτουργία του ιστορικού.",
+  "History": "Ιστορικό",
+  "Create new playlist": "Δημιουργία λίστας αναπαραγωγής",
+  "TRACKS": "ΤΡΑΓΟΥΔΙΑ",
+  "Sort by": "Ταξινόμηση κατά",
+  "Date Added": "Ημερομηνία Προσθήκης",
+  "Name (A-Z)": "Όνομα (Α-Ω)",
+  "Artist (A-Z)": "Καλλιτέχνης (Α-Ω)",
+  "Album (A-Z)": "Album (Α-Ω)",
+  "Error loading lyrics or lyrics not found!": "Σφάλμα κατά τη φόρτωση στίχων ή αδυναμία εύρεσης στίχων!",
+  "Create playlist": "Δημιουργία λίστας αναπαραγωγής",
+  "Create": "Δημιουργία",
+  "Add to playlist": "Προσθήκη στην λίστα αναπαραγωγής",
+  "Create new": "Δημιουργία νέου",
+  "Remove": "Αφαίρεση",
+  "Play next": "Παίξε αμέσως μετά",
+  "Add to queue": "Προσθήκη στην ουρά",
+  "Remove from library": "Κατάργηση από τη βιβλιοθήκη",
+  "Remove from playlist": "Κατάργηση από τη λίστα αναπαραγωγής",
+  "Play track mix": "Αναπαραγωγή μίξης τραγουδιών",
+  "Go to": "Πήγαινε σε",
+  "Track Mix": "Μίξη Τραγουδιών",
+  "Duration": "Διάρκεια",
+  "Released": "Κυκλοφόρησε",
+  "Disk": "Δίσκος",
+  "albums": "album",
+  "Play top": "Αναπαραγωγή κορυφαίου",
+  "Radio": "Ραδιόφωνο",
+  "Show all albums": "Εμφάνιση όλων των album",
+  "Show all singles": "Εμφάνιση όλων των single",
+  "Show more": "Εμφάνιση περισσότερων",
+  "Downloaded": "Ελήφθησαν",
+  "Queue": "Ουρά",
+  "Total": "Σύνολο ",
+  "Stop": "Διακοπή",
+  "Start": "Έναρξη",
+  "Show folder": "Εμφάνιση φακέλου",
+  "Clear queue": "Εκκαθάριση ουράς",
+  "Playing from": "Αναπαραγωγή από",
+  "Info": "Πληροφορίες",
+  "Lyrics": "Στίχοι",
+  "Track number": "Αριθμός τραγουδιού",
+  "Disk number": "Αριθμός δίσκου",
+  "Explicit": "Άσεμνο περιεχόμενο",
+  "Source": "Πηγή",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Error logging in!": "Σφάλμα εισόδου!",
+  "Please try again later, or try another account.": "Δοκιμάστε ξανά αργότερα ή δοκιμάστε έναν άλλο λογαριασμό.",
+  "Logout": "Αποσύνδεση",
+  "Login using browser": "Σύνδεση χρησιμοποιώντας το πρόγραμμα περιήγησης",
+  "Please login using your Deezer account:": "Συνδεθείτε χρησιμοποιώντας τον λογαριασμό σας στο Deezer:",
+  "...or paste your ARL/Token below:": "... ή επικολλήστε το ARL/Token σας παρακάτω:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
-  "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Login": "Σύνδεση",
+  "By using this program, you disagree with Deezer's ToS.": "Χρησιμοποιώντας αυτό το πρόγραμμα, διαφωνείτε με τους όρους χρήσης του Deezer.",
+  "Only in Electron version!": "Μόνο στην έκδοση Electron!",
+  "Search results for:": "Αποτελέσματα αναζήτησης για:",
+  "Error loading data!": "Σφάλμα φόρτωσης δεδομένων!",
+  "Try again later!": "Δοκιμάστε ξανά αργότερα!",
+  "Search": "Αναζήτηση",
+  "Streaming Quality": "Ποιότητα ροής",
+  "Download Quality": "Ποιότητα λήψης",
+  "Downloads Directory": "Κατάλογος Λήψεων",
+  "Simultaneous downloads": "Ταυτόχρονες λήψεις",
+  "Always show download confirm dialog before downloading.": "Να εμφανίζεται πάντα το παράθυρο διαλόγου επιβεβαίωσης πριν από τη λήψη.",
+  "Show download dialog": "Εμφάνιση παραθύρου διαλόγου επιβεβαίωσης",
+  "Create folders for artists": "Δημιουργία φακέλου για καλλιτέχνη",
+  "Create folders for albums": "Δημιουργία φακέλων για album",
+  "Download lyrics": "Λήψη στίχων",
+  "Variables": "Μεταβλητές",
+  "UI": "Περιβάλλον Χρήστη",
+  "Show autocomplete in search": "Εμφάνιση αυτόματων συμπληρώσεων στην αναζήτηση",
+  "Integrations": "Ενσωματώσεις",
+  "This allows listening history, flow and recommendations to work properly.": "Επιτρέπει στο ιστορικό ακρόασης, το flow και τις προτάσεις να λειτουργούν σωστά.",
+  "Log track listens to Deezer": "Καταγραφή ακρόασης κομματιών στο Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Συνδέστε τον λογαριασμό σας LastFM για να επιτρέψετε το scrobbling.",
+  "Login with LastFM": "Σύνδεση με LastFM",
+  "Disconnect LastFM": "Αποσύνδεση από LastFM",
+  "Requires restart to apply!": "Απαιτείται επανεκκίνηση για την εφαρμογή!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Ενεργοποίηση Discord Rich Presence, απαιτείται επανεκκίνηση!",
+  "Discord Rich Presence": "Ενεργοποίηση Discord Rich Presence",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Ενεργοποιήστε το κουμπί συμμετοχής Discord για συγχρονισμό κομματιών, απαιτείται επανεκκίνηση!",
+  "Discord Join Button": "Κουμπί συμμετοχής Discord",
+  "Other": "Άλλα",
+  "Minimize to tray": "Ελαχιστοποίηση σε εικονίδιο",
+  "Don't minimize to tray": "Μην ελαχιστοποιείτε σε εικονίδιο",
+  "Close on exit": "Κλείσιμο κατά την έξοδο",
+  "Settings saved!": "Οι ρυθμίσεις αποθηκεύτηκαν!",
+  "Available only in Electron version!": "Διαθέσιμο μόνο στην έκδοση Electron!",
+  "Crossfade (ms)": "Crossfade (ms)",
+  "Select primary color": "Select primary color",
+  "Light theme": "Light theme",
+  "Create folders for playlists": "Create folders for playlists",
+  "About": "About",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram Releases",
+  "Telegram Group": "Telegram Group",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android Group",
+  "Credits:": "Credits:",
+  "Agree": "Agree"
 }
