--- a/app/client/src/locales/fr.json
+++ b/app/client/src/locales/fr.json
@@ -1,62 +1,62 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
+  "Home": "Accueil",
+  "Browse": "Explorer",
+  "Library": "Bibliothèque",
+  "Tracks": "Pistes",
   "Playlists": "Playlists",
   "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
+  "Artists": "Artistes",
+  "More": "Plus",
+  "Settings": "Paramètres",
+  "Downloads": "Téléchargements",
   "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
   "Play": "Play",
   "Add to library": "Add to library",
-  "Download": "Download",
+  "Download": "Télécharger",
   "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
+  "tracks": "pistes",
+  "Quality": "Qualité",
+  "Estimated size:": "Durée estimée:",
+  "Start downloading": "Lancer le téléchargement",
+  "Cancel": "Annuler",
   "Stream logging is disabled!": "Stream logging is disabled!",
   "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
+  "History": "Historique",
+  "Create new playlist": "Créer une nouvelle playlist",
+  "TRACKS": "PISTES",
+  "Sort by": "Trier par",
+  "Date Added": "Ajouté le",
+  "Name (A-Z)": "Nom (A-Z)",
+  "Artist (A-Z)": "Artiste (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
   "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
+  "Create playlist": "Créer une playlist",
+  "Create": "Créer",
+  "Add to playlist": "Ajouter à une playlist",
   "Create new": "Create new",
-  "Remove": "Remove",
+  "Remove": "Supprimer",
   "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
+  "Add to queue": "Ajouter à la file d'attente",
+  "Remove from library": "Supprimer de la bibliothèque",
+  "Remove from playlist": "Supprimer de la playlist",
   "Play track mix": "Play track mix",
   "Go to": "Go to",
   "Track Mix": "Track Mix",
-  "Duration": "Duration",
+  "Duration": "Durée",
   "Released": "Released",
-  "Disk": "Disk",
+  "Disk": "Disque",
   "albums": "albums",
   "Play top": "Play top",
   "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
+  "Show all albums": "Afficher tous les albums",
+  "Show all singles": "Afficher tous les singles",
+  "Show more": "Afficher plus",
+  "Downloaded": "Téléchargés",
   "Queue": "Queue",
   "Total": "Total",
-  "Stop": "Stop",
+  "Stop": "Arrêter",
   "Start": "Start",
-  "Show folder": "Show folder",
+  "Show folder": "Afficher le dossier",
   "Clear queue": "Clear queue",
   "Playing from": "Playing from",
   "Info": "Info",
@@ -67,46 +67,58 @@
   "Source": "Source",
   "ID": "ID",
   "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Please try again later, or try another account.": "Veuillez réessayer plus tard, ou essayez avec un autre compte.",
+  "Logout": "Déconnexion",
+  "Login using browser": "Connexion via navigateur",
+  "Please login using your Deezer account:": "Veuillez vous connecter en utilisant votre compte Deezer:",
+  "...or paste your ARL/Token below:": "...ou copiez votre ARL/Token ici:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
+  "Login": "Connexion",
   "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
+  "Only in Electron version!": "Uniquement en version Electron !",
+  "Search results for:": "Résultats de la recherche pour:",
   "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
+  "Try again later!": "Réessayez plus tard !",
+  "Search": "Recherche",
+  "Streaming Quality": "Qualité en streaming",
+  "Download Quality": "Qualité de téléchargement",
+  "Downloads Directory": "Chemin de sauvegarde",
+  "Simultaneous downloads": "Limite téléchargements simultanés",
   "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
   "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
+  "Create folders for artists": "Générer des dossiers par artiste",
+  "Create folders for albums": "Générer des dossiers par album",
+  "Download lyrics": "Télécharger les paroles",
   "Variables": "Variables",
-  "UI": "UI",
+  "UI": "Interface",
   "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
+  "Integrations": "Intégrations",
+  "This allows listening history, flow and recommendations to work properly.": "Cela permet à l'historique des titres écoutés, flow et aux recommandations de fonctionner correctement.",
   "Log track listens to Deezer": "Log track listens to Deezer",
   "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
   "Login with LastFM": "Login with LastFM",
   "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
-  "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
+  "Requires restart to apply!": "Redémarrage nécessaire pour prendre effet !",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Activer la présence Discord, nécessite un redémarrage pour prendre effet !",
+  "Discord Rich Presence": "Présence Discord",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Activer le bouton \"rejoindre\" sur Discord pour synchroniser les pistes, nécessite un redémarrage pour prendre effet !",
+  "Discord Join Button": "Bouton rejoindre sur Discord",
+  "Other": "Autre",
+  "Minimize to tray": "Réduire dans la zone de notification",
+  "Don't minimize to tray": "Ne pas réduire dans la zone de notification",
   "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Settings saved!": "Paramètres sauvegardés !",
+  "Available only in Electron version!": "Uniquement disponible en version Electron !",
+  "Crossfade (ms)": "Crossfade (ms)",
+  "Select primary color": "Select primary color",
+  "Light theme": "Light theme",
+  "Create folders for playlists": "Create folders for playlists",
+  "About": "About",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram Releases",
+  "Telegram Group": "Telegram Group",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android Group",
+  "Credits:": "Credits:",
+  "Agree": "Agree"
 }
