--- a/app/client/src/locales/hu.json
+++ b/app/client/src/locales/hu.json
@@ -1,14 +1,14 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
+  "Home": "Kezdőlap",
+  "Browse": "Böngészés",
+  "Library": "Könyvtár",
+  "Tracks": "Dalok",
+  "Playlists": "Lejátszási listák",
+  "Albums": "Albumok",
+  "Artists": "Előadók",
+  "More": "Továbbiak",
+  "Settings": "Beállítások",
+  "Downloads": "Letöltések",
   "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
   "Play": "Play",
   "Add to library": "Add to library",
@@ -108,5 +108,17 @@
   "Don't minimize to tray": "Don't minimize to tray",
   "Close on exit": "Close on exit",
   "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Available only in Electron version!": "Available only in Electron version!",
+  "Crossfade (ms)": "Crossfade (ms)",
+  "Select primary color": "Select primary color",
+  "Light theme": "Light theme",
+  "Create folders for playlists": "Create folders for playlists",
+  "About": "About",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram Releases",
+  "Telegram Group": "Telegram Group",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android Group",
+  "Credits:": "Credits:",
+  "Agree": "Agree"
 }
