--- a/app/client/src/locales/pl.json
+++ b/app/client/src/locales/pl.json
@@ -1,112 +1,124 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
+  "Home": "Strona główna",
+  "Browse": "Przeglądaj",
+  "Library": "Biblioteka",
+  "Tracks": "Utwory",
+  "Playlists": "Playlisty",
+  "Albums": "Albumy",
+  "Artists": "Wykonawcy",
+  "More": "Więcej",
+  "Settings": "Ustawienia",
+  "Downloads": "Pobrane",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Wyszukaj lub wklej adres URL Deezera. Wciśnij \"/\" aby szybko uaktywnić pasek wyszukiwania.",
+  "Play": "Odtwórz",
+  "Add to library": "Dodaj do biblioteki",
+  "Download": "Pobierz",
+  "fans": "fani",
+  "tracks": "utwory",
+  "Quality": "Jakość",
+  "Estimated size:": "Szacowany rozmiar:",
+  "Start downloading": "Rozpocznij pobieranie",
+  "Cancel": "Anuluj",
+  "Stream logging is disabled!": "Rejestrowanie strumieniowania jest wyłączone!",
+  "Enable it in settings for history to work properly.": "Włącz to w ustawieniach, aby historia działała prawidłowo.",
+  "History": "Historia",
+  "Create new playlist": "Utwórz nową playlistę",
+  "TRACKS": "UTWORY",
+  "Sort by": "Sortuj wg",
+  "Date Added": "Data dodania",
+  "Name (A-Z)": "Nazwa (A-Z)",
+  "Artist (A-Z)": "Artysta (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
+  "Error loading lyrics or lyrics not found!": "Wystąpił błąd podczas ładowania tekstu lub tekst nie został znaleziony!",
+  "Create playlist": "Utwórz playlistę",
+  "Create": "Utwórz",
+  "Add to playlist": "Dodaj do playlisty",
+  "Create new": "Utwórz nową",
+  "Remove": "Usuń",
+  "Play next": "Odtwarzaj następne",
+  "Add to queue": "Dodaj do kolejki",
+  "Remove from library": "Usuń z biblioteki",
+  "Remove from playlist": "Usuń z playlisty",
+  "Play track mix": "Odtwórz mieszane utwory",
+  "Go to": "Przejdź do",
+  "Track Mix": "Mieszaj utwory",
+  "Duration": "Czas trwania",
+  "Released": "Wydano",
+  "Disk": "Płyta",
+  "albums": "albumy",
+  "Play top": "Odtwarzaj topkę",
   "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
+  "Show all albums": "Pokaż wszystkie albumy",
+  "Show all singles": "Pokaż wszystkie single",
+  "Show more": "Pokaż więcej",
+  "Downloaded": "Pobrane",
+  "Queue": "Kolejka",
+  "Total": "Łącznie",
+  "Stop": "Zatrzymaj",
+  "Start": "Rozpocznij",
+  "Show folder": "Pokaż folder",
+  "Clear queue": "Wyczyść kolejkę",
+  "Playing from": "Odtwarzanie z",
   "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Lyrics": "Tekst",
+  "Track number": "Numer utworu",
+  "Disk number": "Numer płyty",
+  "Explicit": "Wulgarne",
+  "Source": "Źródło",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Error logging in!": "Błąd podczas logowania!",
+  "Please try again later, or try another account.": "Spróbuj ponownie później lub spróbuj innego konta.",
+  "Logout": "Wyloguj",
+  "Login using browser": "Zaloguj się za pomocą przeglądarki",
+  "Please login using your Deezer account:": "Zaloguj się używając swojego konta Deezer:",
+  "...or paste your ARL/Token below:": "...lub wklej ARL/Token poniżej:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "Login": "Zaloguj",
+  "By using this program, you disagree with Deezer's ToS.": "Korzystając z tego programu, nie zgadzasz się z ToS Deezera.",
+  "Only in Electron version!": "Tylko w wersji Electron!",
+  "Search results for:": "Wyniki wyszukiwania dla:",
+  "Error loading data!": "Błąd ładowania danych!",
+  "Try again later!": "Spróbuj ponownie później!",
+  "Search": "Szukaj",
+  "Streaming Quality": "Jakość odtwarzania",
+  "Download Quality": "Jakość pobierania",
+  "Downloads Directory": "Katalog pobierania",
+  "Simultaneous downloads": "Jednoczesne pobieranie",
+  "Always show download confirm dialog before downloading.": "Zawsze proś o potwierdzenie przed pobieraniem.",
+  "Show download dialog": "Pokazuj okno dialogowe pobierania",
+  "Create folders for artists": "Twórz foldery wykonawców",
+  "Create folders for albums": "Twórz foldery albumów",
+  "Download lyrics": "Pobierz tekst",
+  "Variables": "Zmienne",
+  "UI": "Interfejs",
+  "Show autocomplete in search": "Pokaż autouzupełnianie w wyszukiwarce",
+  "Integrations": "Połącz",
+  "This allows listening history, flow and recommendations to work properly.": "Pozwala na działanie historii odtwarzania, rekomendacji i automatycznych playlist.",
+  "Log track listens to Deezer": "Zapisuj historię odtwarzania na koncie Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Połącz swoje konto LastFM, aby umożliwić scrobbling.",
+  "Login with LastFM": "Zaloguj używając LastFM",
+  "Disconnect LastFM": "Odłącz LastFM",
+  "Requires restart to apply!": "Zmiany wymagają ponownego uruchomienia!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Włącz Szczegółowy Widok Discord, wymaga ponownego uruchomienia!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Włącz w Discordzie przycisk dołączenia, aby synchronizować utwory, wymaga ponownego uruchomienia!",
+  "Discord Join Button": "Przycisk dołączenia Discord",
+  "Other": "Inne",
+  "Minimize to tray": "Minimalizuj do zasobnika",
+  "Don't minimize to tray": "Nie minimalizuj do zasobnika",
+  "Close on exit": "Wyłącz po zamknięciu okna",
+  "Settings saved!": "Ustawienia zapisane!",
+  "Available only in Electron version!": "Dostępne tylko w wersji Electron!",
+  "Crossfade (ms)": "Przejście (ms)",
+  "Select primary color": "Select primary color",
+  "Light theme": "Light theme",
+  "Create folders for playlists": "Create folders for playlists",
+  "About": "About",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram Releases",
+  "Telegram Group": "Telegram Group",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android Group",
+  "Credits:": "Credits:",
+  "Agree": "Agree"
 }
