--- a/app/client/src/locales/pt.json
+++ b/app/client/src/locales/pt.json
@@ -1,54 +1,54 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
+  "Home": "Início",
+  "Browse": "Navegar",
+  "Library": "Biblioteca",
+  "Tracks": "Faixas",
   "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
+  "Albums": "Álbuns",
+  "Artists": "Artistas",
   "More": "More",
-  "Settings": "Settings",
+  "Settings": "Configurações",
   "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Procure ou cole a URL do intérprete. Use \"/\" para focar rapidamente.",
   "Play": "Play",
-  "Add to library": "Add to library",
+  "Add to library": "Adicionar à biblioteca",
   "Download": "Download",
   "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
+  "tracks": "faixas",
+  "Quality": "Qualidade",
+  "Estimated size:": "Tempo estimado:",
+  "Start downloading": "Iniciar download",
+  "Cancel": "Cancelar",
+  "Stream logging is disabled!": "O registro de depuração extra está desativado!",
+  "Enable it in settings for history to work properly.": "Habilite nas configurações para que o histórico funcione corretamente.",
+  "History": "Histórico",
+  "Create new playlist": "Criar nova playlist",
+  "TRACKS": "FAIXAS",
   "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
-  "Radio": "Radio",
-  "Show all albums": "Show all albums",
+  "Date Added": "Data de adição",
+  "Name (A-Z)": "Nome (A-Z)",
+  "Artist (A-Z)": "Artista (A-Z)",
+  "Album (A-Z)": "Álbum (A-Z)",
+  "Error loading lyrics or lyrics not found!": "Erro ao carregar letras ou letras não encontradas!",
+  "Create playlist": "Criar playlist",
+  "Create": "Criar",
+  "Add to playlist": "Adicionar à playlist",
+  "Create new": "Criar novo",
+  "Remove": "Remover",
+  "Play next": "Reproduzir à seguir",
+  "Add to queue": "Adicionar à fila",
+  "Remove from library": "Remover da biblioteca",
+  "Remove from playlist": "Remover da playlist",
+  "Play track mix": "Reproduzir mistura de trilha",
+  "Go to": "Ir para",
+  "Track Mix": "Faixa Mix",
+  "Duration": "Duração",
+  "Released": "Lançamento",
+  "Disk": "Disco",
+  "albums": "álbuns",
+  "Play top": "Reproduzir no topo",
+  "Radio": "Rádio",
+  "Show all albums": "Mostrar todos os álbuns",
   "Show all singles": "Show all singles",
   "Show more": "Show more",
   "Downloaded": "Downloaded",
@@ -99,14 +99,26 @@
   "Login with LastFM": "Login with LastFM",
   "Disconnect LastFM": "Disconnect LastFM",
   "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
-  "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Enable Discord Rich Presence, requires restart to toggle!": "Ativar o Rich Presence do Discord, requer reiniciar para alternar!",
+  "Discord Rich Presence": "Habilitar o Discord",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Ativar o botão de adesão do Discord para sincronizar faixas requer reinicialização para alternar!",
+  "Discord Join Button": "Botão de Entrada Discord",
+  "Other": "Outros",
+  "Minimize to tray": "Minimizar para a bandeja",
+  "Don't minimize to tray": "Minimizar automaticamente para a bandeja",
+  "Close on exit": "Fechar ao sair",
+  "Settings saved!": "Configurações salvas!",
+  "Available only in Electron version!": "Disponível apenas na versão completa!",
+  "Crossfade (ms)": "Transição suave (ms)",
+  "Select primary color": "Escolha a cor primária",
+  "Light theme": "Tema Claro",
+  "Create folders for playlists": "Criar pastas para playlists",
+  "About": "Sobre",
+  "Links:": "Links:",
+  "Telegram Releases": "Versões no Telegram",
+  "Telegram Group": "Grupo do Telegram",
+  "Discord": "Discord",
+  "Telegram Android Group": "Grupo Android do Telegram",
+  "Credits:": "Créditos:",
+  "Agree": "Concordo"
 }
