--- a/app/client/src/locales/ro.json
+++ b/app/client/src/locales/ro.json
@@ -1,112 +1,124 @@
 {
   "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
+  "Browse": "Caută",
+  "Library": "Librărie",
+  "Tracks": "Piese",
+  "Playlists": "Playlist-uri",
+  "Albums": "Albume",
+  "Artists": "Artiști",
+  "More": "Mai mult",
+  "Settings": "Setări",
+  "Downloads": "Descărcări",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Caută sau lipește URL-ul Deezer. Folosește \"/\" pentru a se focaliza rapid.",
   "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
+  "Add to library": "Adaugă la librărie",
+  "Download": "Descărcați",
+  "fans": "fani",
+  "tracks": "piese",
+  "Quality": "Calitate",
+  "Estimated size:": "Dimensiune estimată:",
+  "Start downloading": "Începe descărcarea",
+  "Cancel": "Anulează",
+  "Stream logging is disabled!": "Stream logging-ul este dezactivat!",
+  "Enable it in settings for history to work properly.": "Activați-l în setări pentru ca istoricul să funcționeze corect.",
+  "History": "Istoric",
+  "Create new playlist": "Crează un nou playlist",
+  "TRACKS": "PIESE",
+  "Sort by": "Sortează după",
+  "Date Added": "Dată Adăugare",
+  "Name (A-Z)": "Nume (A-Z)",
+  "Artist (A-Z)": "Artiști (A-Z)",
+  "Album (A-Z)": "Albume (A-Z)",
+  "Error loading lyrics or lyrics not found!": "Eroare la încărcarea versurilor sau versurile nu au fost găsite!",
+  "Create playlist": "Crează un playlist",
+  "Create": "Creează",
+  "Add to playlist": "Adaugă la un playlist",
+  "Create new": "Crează nou",
+  "Remove": "Șterge",
+  "Play next": "Redă următorul",
+  "Add to queue": "Adaugă la coadă",
+  "Remove from library": "Șterge din librărie",
+  "Remove from playlist": "Șterge din playlist",
+  "Play track mix": "Redă mix-ul piesei",
+  "Go to": "Accesați",
+  "Track Mix": "Mix-ul Piesei",
+  "Duration": "Durată",
+  "Released": "Lansat",
+  "Disk": "Disc",
+  "albums": "albume",
+  "Play top": "Redă de la început",
   "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
+  "Show all albums": "Afișează toate albumele",
+  "Show all singles": "Arată toate melodiile",
+  "Show more": "Arată mai multe",
+  "Downloaded": "Descărcate",
+  "Queue": "Coadă",
   "Total": "Total",
   "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
+  "Start": "Începe",
+  "Show folder": "Arată folder-ul",
+  "Clear queue": "Șterge coada",
+  "Playing from": "Redare din",
+  "Info": "Informații",
+  "Lyrics": "Versuri",
+  "Track number": "Numărul piesei",
+  "Disk number": "Numărul discului",
   "Explicit": "Explicit",
-  "Source": "Source",
+  "Source": "Sursă",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Error logging in!": "Eroare la autentificare!",
+  "Please try again later, or try another account.": "Te rugăm să încerci din nou mai târziu, sau încearcă cu un alt cont.",
+  "Logout": "Deconectează-te",
+  "Login using browser": "Autentificare utilizând browserul",
+  "Please login using your Deezer account:": "Te rugăm să te conectezi utilizând contul tau Deezer:",
+  "...or paste your ARL/Token below:": "...sau lipiți ARL/Token-ul mai jos:",
   "ARL/Token": "ARL/Token",
   "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "By using this program, you disagree with Deezer's ToS.": "Folosind acest program, nu sunteți de acord cu ToS-ul Deezer.",
+  "Only in Electron version!": "Doar în versiunea Electron!",
+  "Search results for:": "Rezultatele căutării pentru:",
+  "Error loading data!": "Eroare la încărcarea datelor!",
+  "Try again later!": "Încearcă din nou mai târziu!",
+  "Search": "Caută",
+  "Streaming Quality": "Calitatea streaming-ului",
+  "Download Quality": "Calitatea descărcărilor",
+  "Downloads Directory": "Descărcați in",
+  "Simultaneous downloads": "Descărcări simultane",
+  "Always show download confirm dialog before downloading.": "Arată întotdeauna confirmarea a descărcării înainte de descărcare.",
+  "Show download dialog": "Arată pagina de download",
+  "Create folders for artists": "Crează foldere pentru artiști",
+  "Create folders for albums": "Crează foldere pentru albume",
+  "Download lyrics": "Descărcați versurile .LRC",
+  "Variables": "Variabile",
+  "UI": "Interfață",
+  "Show autocomplete in search": "Afișează lista de autocompletare",
+  "Integrations": "Integrări",
+  "This allows listening history, flow and recommendations to work properly.": "Aceasta permite folosirea istoricului, Flow-ului și recomandările pentru a funcționa corect.",
+  "Log track listens to Deezer": "Înregistrează ascultările la Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Conectați-vă contul LastFM pentru a permite scrobbling-ul.",
+  "Login with LastFM": "Conectează-te cu LastFM",
+  "Disconnect LastFM": "Deconectează LastFM",
+  "Requires restart to apply!": "Necesită repornirea pentru a aplica!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Activează Discord Rich Presence, necesită repornirea pentru a comuta!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Activează butonul de join la Discord pentru sincronizarea pieselor, necesită repornire în comutator!",
+  "Discord Join Button": "Butonul de join Discord",
+  "Other": "Altele",
+  "Minimize to tray": "Minimizează în bara de programe",
+  "Don't minimize to tray": "Nu minimiza în bara de programe",
+  "Close on exit": "Închide la ieșire",
+  "Settings saved!": "Setările au fost salvate!",
+  "Available only in Electron version!": "Disponibil doar în versiunea Electron!",
+  "Crossfade (ms)": "Crossfade (ms)",
+  "Select primary color": "Select primary color",
+  "Light theme": "Light theme",
+  "Create folders for playlists": "Create folders for playlists",
+  "About": "About",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram Releases",
+  "Telegram Group": "Telegram Group",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android Group",
+  "Credits:": "Credits:",
+  "Agree": "Agree"
 }
