--- a/app/client/src/locales/ru.json
+++ b/app/client/src/locales/ru.json
@@ -1,112 +1,124 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
-  "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Home": "Главная",
+  "Browse": "Обзор",
+  "Library": "Избранное",
+  "Tracks": "Треки",
+  "Playlists": "Плейлисты",
+  "Albums": "Альбомы",
+  "Artists": "Артисты",
+  "More": "Ещё",
+  "Settings": "Настройки",
+  "Downloads": "Загрузки",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Введите запрос или ссылку. \"/\" для быстрого поиска.",
+  "Play": "Воспроизвести",
+  "Add to library": "Добавить в Избранное",
+  "Download": "Скачать",
+  "fans": "поклонники",
+  "tracks": "треки",
+  "Quality": "Качество звука",
+  "Estimated size:": "Приблизительный размер:",
+  "Start downloading": "Начать загрузку",
+  "Cancel": "Отмена",
+  "Stream logging is disabled!": "Отправка статистики отключена!",
+  "Enable it in settings for history to work properly.": "Включите её в настройках для работы рекомендаций.",
+  "History": "История",
+  "Create new playlist": "Новый плейлист",
+  "TRACKS": "Треки",
+  "Sort by": "Сортировать по",
+  "Date Added": "Дата добавления",
+  "Name (A-Z)": "Название (А - Я)",
+  "Artist (A-Z)": "Исполнитель (А - Я)",
+  "Album (A-Z)": "Альбом (A - Я)",
+  "Error loading lyrics or lyrics not found!": "Ошибка получения текста!",
+  "Create playlist": "Создать плейлист",
+  "Create": "Создать",
+  "Add to playlist": "Добавить в плейлист",
+  "Create new": "Создать новый",
+  "Remove": "Удалить",
+  "Play next": "Играть следующим",
+  "Add to queue": "Добавить в очередь",
+  "Remove from library": "Удалить из Избранного",
+  "Remove from playlist": "Удалить из плейлиста",
+  "Play track mix": "Воспроизвести микс",
+  "Go to": "Перейти к",
+  "Track Mix": "Микс",
+  "Duration": "Продолжительность",
+  "Released": "Релиз",
+  "Disk": "Диск",
+  "albums": "альбомы",
+  "Play top": "Играть популярные",
+  "Radio": "Радио",
+  "Show all albums": "Показать все",
+  "Show all singles": "Показать все синглы",
+  "Show more": "Ещё",
+  "Downloaded": "Загрузки",
+  "Queue": "Очередь",
+  "Total": "Всего",
+  "Stop": "Остановить",
+  "Start": "Пуск",
+  "Show folder": "Открыть папку",
+  "Clear queue": "Очистить очередь",
+  "Playing from": "Сейчас играет",
+  "Info": "Инфо",
+  "Lyrics": "Текст песни",
+  "Track number": "Дорожка",
+  "Disk number": "Номер диска",
+  "Explicit": "18+",
+  "Source": "Источник",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
-  "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "Error logging in!": "Ошибка авторизации!",
+  "Please try again later, or try another account.": "Пожалуйста, повторите попытку позже или попробуйте другой аккаунт.",
+  "Logout": "Выход",
+  "Login using browser": "Войти через браузер",
+  "Please login using your Deezer account:": "Войдите, используя свой аккаунт Deezer:",
+  "...or paste your ARL/Token below:": "...или вставьте ваш токен (ARL) ниже:",
+  "ARL/Token": "Токен (ARL) ",
+  "Login": "Вход",
+  "By using this program, you disagree with Deezer's ToS.": "Используя эту программу, вы не соглашаетесь с правилами использования Deezer.",
+  "Only in Electron version!": "Только в версии Electron!",
+  "Search results for:": "Результаты поиска для:",
+  "Error loading data!": "Ошибка при загрузке данных!",
+  "Try again later!": "Повторите попытку позже!",
+  "Search": "Поиск",
+  "Streaming Quality": "Качество при воспроизведении",
+  "Download Quality": "Качество при загрузке",
+  "Downloads Directory": "Папка загрузок",
+  "Simultaneous downloads": "Количество одновременных загрузок",
+  "Always show download confirm dialog before downloading.": "Подтверждать загрузки.",
+  "Show download dialog": "Подтверждение",
+  "Create folders for artists": "Создавать папки для исполнителей",
+  "Create folders for albums": "Создавать папки для альбомов",
+  "Download lyrics": "Скачивать тексты",
+  "Variables": "Переменные",
+  "UI": "Интерфейс",
+  "Show autocomplete in search": "Подсказки при поиске",
+  "Integrations": "Интеграции",
+  "This allows listening history, flow and recommendations to work properly.": "Для правильной работы Flow, рекомендаций и истории.",
+  "Log track listens to Deezer": "Отправлять статистику",
+  "Connect your LastFM account to allow scrobbling.": "Подключите ваш аккаунт LastFM, чтобы разрешить скробблинг.",
+  "Login with LastFM": "Авторизоваться через LastFM",
+  "Disconnect LastFM": "Отключить LastFM",
+  "Requires restart to apply!": "Требуется перезапуск приложения!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Включить Discord Rich Presence, требуется перезапуск!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Включить кнопку вступления Discord для синхронизации треков, требуется перезапуск!",
+  "Discord Join Button": "Кнопка \"Вступить\" в Discord",
+  "Other": "Другое",
+  "Minimize to tray": "Сворачивать в трей",
+  "Don't minimize to tray": "Не сворачивать в трей",
+  "Close on exit": "Закрывать при выходе",
+  "Settings saved!": "Настройки сохранены!",
+  "Available only in Electron version!": "Доступно только в версии на Electron!",
+  "Crossfade (ms)": "Кроссфейд (мс)",
+  "Select primary color": "Select primary color",
+  "Light theme": "Light theme",
+  "Create folders for playlists": "Create folders for playlists",
+  "About": "About",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram Releases",
+  "Telegram Group": "Telegram Group",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android Group",
+  "Credits:": "Credits:",
+  "Agree": "Agree"
 }
