--- a/app/client/src/locales/tr.json
+++ b/app/client/src/locales/tr.json
@@ -1,112 +1,124 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
+  "Home": "Ana Sayfa",
+  "Browse": "Gözat",
+  "Library": "Kütüphane",
+  "Tracks": "Parçalar",
+  "Playlists": "Oynatma listeleri",
+  "Albums": "Albümler",
+  "Artists": "Sanatçılar",
+  "More": "Daha Fazla",
+  "Settings": "Ayarlar",
+  "Downloads": "İndirilenler",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Arama yapın veya Deezer URL'sini yapıştırın. Hızlı odaklanmak için \"/\" kullanın.",
+  "Play": "Oynat",
+  "Add to library": "Kütüphaneye ekle",
+  "Download": "İndir",
+  "fans": "hayranlar",
+  "tracks": "parçalar",
+  "Quality": "Kalite",
+  "Estimated size:": "Tahmini Süre:",
+  "Start downloading": "İndirmeyi başlat",
+  "Cancel": "İptal Et",
+  "Stream logging is disabled!": "Akış günlüğü devre dışı bırakıldı!",
+  "Enable it in settings for history to work properly.": "Geçmişin düzgün çalışması için ayarlarda etkinleştirin.",
+  "History": "Geçmiş",
+  "Create new playlist": "Yeni oynatma listesi oluştur",
+  "TRACKS": "PARÇALAR",
+  "Sort by": "Sırala",
+  "Date Added": "Eklenme Tarihi",
+  "Name (A-Z)": "Ad (A-Z)",
+  "Artist (A-Z)": "Sanatçı (A-Z)",
+  "Album (A-Z)": "Albüm (A-Z)",
+  "Error loading lyrics or lyrics not found!": "Şarkı sözleri bulunamadı veya yüklenirken hata oluştu!",
+  "Create playlist": "Oynatma listesi oluştur",
+  "Create": "Oluştur",
+  "Add to playlist": "Oynatma listesine ekle",
+  "Create new": "Yeni oluştur",
+  "Remove": "Kaldır",
+  "Play next": "Sonrakini çal",
+  "Add to queue": "Sıraya ekle",
+  "Remove from library": "Kütüphaneden kaldır",
+  "Remove from playlist": "Oynatma listesinden kaldır",
   "Play track mix": "Play track mix",
-  "Go to": "Go to",
+  "Go to": "Git",
   "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
+  "Duration": "Süre",
+  "Released": "Yayınlandı",
   "Disk": "Disk",
-  "albums": "albums",
+  "albums": "albümler",
   "Play top": "Play top",
-  "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Radio": "Radyo",
+  "Show all albums": "Tüm albümleri göster",
+  "Show all singles": "Tüm şarkıları göster",
+  "Show more": "Daha fazla göster",
+  "Downloaded": "İndirildi",
+  "Queue": "Sıra",
+  "Total": "Toplam",
+  "Stop": "Durdur",
+  "Start": "Başlat",
+  "Show folder": "Klasörü göster",
+  "Clear queue": "Sırayı temizle",
+  "Playing from": "Şuradan oynatılıyor:",
+  "Info": "Bilgi",
+  "Lyrics": "Şarkı sözleri",
+  "Track number": "Parça Numarası",
+  "Disk number": "Disk numarası",
+  "Explicit": "Sakıncalı",
+  "Source": "Kaynak",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Error logging in!": "Oturum açma hatası!",
+  "Please try again later, or try another account.": "Lütfen daha sonra tekrar deneyin veya başka bir hesap deneyin.",
+  "Logout": "Çıkış",
+  "Login using browser": "Tarayıcı kullanarak giriş yapın",
+  "Please login using your Deezer account:": "Lütfen Deezer hesabınızı kullanarak giriş yapın.",
+  "...or paste your ARL/Token below:": "yada ARL/Token aşağıya yapıştırın:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
+  "Login": "Giriş",
+  "By using this program, you disagree with Deezer's ToS.": "Bu programı kullanarak Deezer'in Hizmet Şartları'na katılmıyorsunuz.",
+  "Only in Electron version!": "Sadece Electron versiyonunda!",
+  "Search results for:": "Arama sonuçları:",
+  "Error loading data!": "Veri yükleme hatası!",
+  "Try again later!": "Daha sonra yeniden deneyin!",
+  "Search": "Ara",
+  "Streaming Quality": "Yayın Kalitesi",
+  "Download Quality": "İndirme kalitesi",
+  "Downloads Directory": "İndirme Dizini",
+  "Simultaneous downloads": "Eşzamanlı indirmeler",
+  "Always show download confirm dialog before downloading.": "İndirmeden önce her zaman indirme onayı iletişim kutusunu göster.",
+  "Show download dialog": "İndirme iletişim kutusunu göster",
+  "Create folders for artists": "Sanatçılar için klasörler oluşturun",
+  "Create folders for albums": "Albümler için klasörler oluşturun",
+  "Download lyrics": ". Lrc şarkı sözlerini indir",
+  "Variables": "Değişkenler",
+  "UI": "Arayüz",
+  "Show autocomplete in search": "Otomatik tamamlama listesini göster",
+  "Integrations": "Entegrasyonlar",
+  "This allows listening history, flow and recommendations to work properly.": "Bu dinleme geçmişinin, akışının ve önerilerin düzgün çalışmasını sağlar.",
   "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
-  "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Connect your LastFM account to allow scrobbling.": "Scrobbling'e izin vermek için LastFM hesabınızı bağlayın.",
+  "Login with LastFM": "LastFM ile giriş yapın",
+  "Disconnect LastFM": "LastFM bağlantısını kes",
+  "Requires restart to apply!": "Yeniden başlatma gerekli!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Discord zengin içeriği etkinleştirin, geçiş yapmak için yeniden başlatma gerekir!",
+  "Discord Rich Presence": "Discord zengin içerik",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Şarkıları senkronize etmek için Discord katılma düğmesini etkinleştirin, geçiş yapmak için yeniden başlatma gerektirir!",
+  "Discord Join Button": "Discord Katılma Düğmesi",
+  "Other": "Diğer",
+  "Minimize to tray": "Simge durumuna küçülsün",
+  "Don't minimize to tray": "Simge durumuna küçülmesin tamamen kapansın",
+  "Close on exit": "Programı kapattığınızda",
+  "Settings saved!": "Ayarlar kaydedildi!",
+  "Available only in Electron version!": "Sadece Electron versiyonunda mevcuttur!",
+  "Crossfade (ms)": "Crossfade (ms)",
+  "Select primary color": "Select primary color",
+  "Light theme": "Light theme",
+  "Create folders for playlists": "Create folders for playlists",
+  "About": "About",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram Releases",
+  "Telegram Group": "Telegram Group",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android Group",
+  "Credits:": "Credits:",
+  "Agree": "Agree"
 }
