--- a/app/client/src/locales/uk.json
+++ b/app/client/src/locales/uk.json
@@ -1,112 +1,124 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
-  "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Home": "Головна",
+  "Browse": "Перегляд",
+  "Library": "Бібліотека",
+  "Tracks": "Треки",
+  "Playlists": "Плейлисти",
+  "Albums": "Альбоми",
+  "Artists": "Виконавці",
+  "More": "Більше",
+  "Settings": "Налаштування",
+  "Downloads": "Завантаження",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Знайдіть або вставте URL Deezer. Використовуйте \"/\" для швидкого фокусування.",
+  "Play": "Відтворити",
+  "Add to library": "Додати до бібліотеки",
+  "Download": "Завантажити",
+  "fans": "фани",
+  "tracks": "треки",
+  "Quality": "Якість",
+  "Estimated size:": "Приблизний розмір:",
+  "Start downloading": "Почати завантаження",
+  "Cancel": "Скасувати",
+  "Stream logging is disabled!": "Журнал трансляції відключений!",
+  "Enable it in settings for history to work properly.": "Увімкніть це в налаштуваннях, щоб історія працювала належним чином.",
+  "History": "Історія",
+  "Create new playlist": "Створити новий плейлист",
+  "TRACKS": "ТРЕКИ",
+  "Sort by": "Сортувати за",
+  "Date Added": "Дата додавання",
+  "Name (A-Z)": "Назва (А-Я)",
+  "Artist (A-Z)": "Виконавець (А-Я)",
+  "Album (A-Z)": "Альбом (А-Я)",
+  "Error loading lyrics or lyrics not found!": "Помилка при завантаженні текстів або тексту не знайдено!",
+  "Create playlist": "Створити плейлист",
+  "Create": "Створити",
+  "Add to playlist": "Додати до плейлиста",
+  "Create new": "Створити новий",
+  "Remove": "Видалити",
+  "Play next": "Відтворити наступний",
+  "Add to queue": "Додати до черги",
+  "Remove from library": "Видалити з бібліотеки",
+  "Remove from playlist": "Видалити з плейлиста",
+  "Play track mix": "Відтворити трек мікс",
+  "Go to": "Перейти до",
+  "Track Mix": "Трек Мікс",
+  "Duration": "Тривалість",
+  "Released": "Реліз",
+  "Disk": "Диск",
+  "albums": "альбоми",
+  "Play top": "Грати зверху",
+  "Radio": "Радіо",
+  "Show all albums": "Показати всі альбоми",
+  "Show all singles": "Показати всі композиції",
+  "Show more": "Показати більше",
+  "Downloaded": "Завантажено",
+  "Queue": "Черга",
+  "Total": "Всього",
+  "Stop": "Зупинити",
+  "Start": "Почати",
+  "Show folder": "Показати теку",
+  "Clear queue": "Очистити чергу",
+  "Playing from": "Відтворення з",
+  "Info": "Інфо",
+  "Lyrics": "Текст",
+  "Track number": "Номер треку",
+  "Disk number": "Номер диску",
+  "Explicit": "Явний",
+  "Source": "Джерело",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
-  "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
+  "Error logging in!": "Помилка входу!",
+  "Please try again later, or try another account.": "Будь ласка, повторіть спробу пізніше, або спробуйте інший обліковий запис.",
+  "Logout": "Вийти",
+  "Login using browser": "Вхід через браузер",
+  "Please login using your Deezer account:": "Будь ласка, увійдіть, використовуючи свій обліковий запис Deezer:",
+  "...or paste your ARL/Token below:": "...або вставте свій ARL/Token нижче:",
+  "ARL/Token": "ARL/токен",
+  "Login": "Увійти",
+  "By using this program, you disagree with Deezer's ToS.": "Використовуючи цю програму, ви не погоджуєтесь із умовами використання Deezer.",
+  "Only in Electron version!": "Тільки в Electron версії!",
+  "Search results for:": "Результати пошуку для:",
+  "Error loading data!": "Помилка завантаження даних!",
+  "Try again later!": "Повторіть спробу пізніше!",
+  "Search": "Пошук",
+  "Streaming Quality": "Якість потоку",
+  "Download Quality": "Якість завантаження",
+  "Downloads Directory": "Тека для завантажень",
+  "Simultaneous downloads": "Одночасних завантажень",
+  "Always show download confirm dialog before downloading.": "Завжди показувати вікно підтвердження перед завантаженням.",
+  "Show download dialog": "Показувати діалогове вікно звантаження",
+  "Create folders for artists": "Створити теки для виконавців",
+  "Create folders for albums": "Створити теки для альбомів",
+  "Download lyrics": "Завантажити тексти пісень",
+  "Variables": "Змінні",
   "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "Show autocomplete in search": "Показувати автозаповнення при пошуку",
+  "Integrations": "Інтеграція",
+  "This allows listening history, flow and recommendations to work properly.": "Це дозволяє слухати історію, потік та рекомендації для правильної роботи.",
+  "Log track listens to Deezer": "Реєстр треків Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Підключіть обліковий запис LastFM, щоб дозволити скроблінг.",
+  "Login with LastFM": "Увійти через LastFM",
+  "Disconnect LastFM": "Від'єднати LastFM",
+  "Requires restart to apply!": "Необхідно перезапустити для застосування!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Увімкнути Discord Rich Presence, для використання необхідний перезапуск!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Увімкніть кнопку приєднання Discord для синхронізації треків, для застосування потрібен перезапуск!",
+  "Discord Join Button": "Кнопка приєднання до Discord",
+  "Other": "Інше",
+  "Minimize to tray": "Згорнути в трей",
+  "Don't minimize to tray": "Не згортати в трей",
+  "Close on exit": "Закрити при виході",
+  "Settings saved!": "Налаштування збережено!",
+  "Available only in Electron version!": "Доступно лише в Electron версії!",
+  "Crossfade (ms)": "Перехресне затухання (мс)",
+  "Select primary color": "Виберіть основний колір",
+  "Light theme": "Світла тема",
+  "Create folders for playlists": "Створити теки для плейлистів",
+  "About": "Про додаток",
+  "Links:": "Посилання:",
+  "Telegram Releases": "Telegram релізи",
+  "Telegram Group": "Група в Telegram",
+  "Discord": "Discord",
+  "Telegram Android Group": "Група Андроїд Telegram",
+  "Credits:": "Автори:",
+  "Agree": "Погоджуюсь"
 }
