--- a/app/client/src/locales/es.json
+++ b/app/client/src/locales/es.json
@@ -1,85 +1,85 @@
 {
-  "Home": "Home",
+  "Home": "Inicio",
   "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
+  "Library": "Biblioteca",
+  "Tracks": "Canciones",
+  "Playlists": "Listas de reproducción",
+  "Albums": "Álbumes",
+  "Artists": "Artistas",
+  "More": "Más",
+  "Settings": "Configuración",
+  "Downloads": "Descargas",
   "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
+  "Play": "Reproducir",
   "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
+  "Download": "Descargar",
+  "fans": "seguidores",
+  "tracks": "canciones",
+  "Quality": "Calidad",
+  "Estimated size:": "Tamaño estimado:",
   "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
+  "Cancel": "Cancelar",
   "Stream logging is disabled!": "Stream logging is disabled!",
   "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
+  "History": "Historial",
   "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
+  "TRACKS": "CANCIONES",
+  "Sort by": "Ordenar por",
+  "Date Added": "Fecha de adición",
+  "Name (A-Z)": "Nombre (A-Z)",
+  "Artist (A-Z)": "Artista (A-Z)",
+  "Album (A-Z)": "Álbum (A-Z)",
   "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
+  "Create playlist": "Crear lista de reproducción",
+  "Create": "Crear",
+  "Add to playlist": "Agregar a la lista de reproducción",
+  "Create new": "Crear nuevo",
+  "Remove": "Quitar",
+  "Play next": "Reproducir siguiente",
   "Add to queue": "Add to queue",
   "Remove from library": "Remove from library",
   "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
+  "Play track mix": "Reproducir mezcla de canciones",
+  "Go to": "Ir a",
+  "Track Mix": "Mezcla de canciones",
+  "Duration": "Duración",
+  "Released": "Publicado",
+  "Disk": "Disco",
+  "albums": "álbumes",
+  "Play top": "Reproducir top",
   "Radio": "Radio",
-  "Show all albums": "Show all albums",
+  "Show all albums": "Mostrar todos los álbumes",
   "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
+  "Show more": "Mostrar más",
+  "Downloaded": "Descargadas",
+  "Queue": "Cola",
   "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
+  "Stop": "Parar",
+  "Start": "Iniciar",
+  "Show folder": "Mostrar carpeta",
+  "Clear queue": "Limpiar cola",
   "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Info": "Información",
+  "Lyrics": "Letras",
+  "Track number": "Número de la canción",
+  "Disk number": "Número del disco",
+  "Explicit": "Explícito",
+  "Source": "Fuente",
   "ID": "ID",
   "Error logging in!": "Error logging in!",
   "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
+  "Logout": "Cerrar sesión",
   "Login using browser": "Login using browser",
   "Please login using your Deezer account:": "Please login using your Deezer account:",
   "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
+  "Login": "Ingresar",
   "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
   "Only in Electron version!": "Only in Electron version!",
   "Search results for:": "Search results for:",
   "Error loading data!": "Error loading data!",
   "Try again later!": "Try again later!",
-  "Search": "Search",
+  "Search": "Buscar",
   "Streaming Quality": "Streaming Quality",
   "Download Quality": "Download Quality",
   "Downloads Directory": "Downloads Directory",
@@ -88,25 +88,37 @@
   "Show download dialog": "Show download dialog",
   "Create folders for artists": "Create folders for artists",
   "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
+  "Download lyrics": "Descargar letras",
   "Variables": "Variables",
-  "UI": "UI",
+  "UI": "IU",
   "Show autocomplete in search": "Show autocomplete in search",
   "Integrations": "Integrations",
   "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
+  "Log track listens to Deezer": "Registrar la canción que escucha a Deezer",
   "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
+  "Login with LastFM": "Iniciar sesión con LastFM",
   "Disconnect LastFM": "Disconnect LastFM",
   "Requires restart to apply!": "Requires restart to apply!",
   "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Activar el botón de unión de Discord para sincronizar las canciones, ¡requiere reiniciar para cambiarlo!",
   "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
+  "Other": "Otro",
   "Minimize to tray": "Minimize to tray",
   "Don't minimize to tray": "Don't minimize to tray",
   "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Settings saved!": "¡Configuraciones guardadas!",
+  "Available only in Electron version!": "Available only in Electron version!",
+  "Crossfade (ms)": "Desvanecimiento (ms)",
+  "Select primary color": "Seleccionar color primario",
+  "Light theme": "Tema claro",
+  "Create folders for playlists": "Crear carpetas para listas de reproducción",
+  "About": "Acerca de",
+  "Links:": "Enlaces:",
+  "Telegram Releases": "Lanzamientos en Telegram",
+  "Telegram Group": "Grupo en Telegram",
+  "Discord": "Discord",
+  "Telegram Android Group": "Grupo de Android en Telegram",
+  "Credits:": "Créditos:",
+  "Agree": "Acepto"
 }
