--- a/app/client/src/locales/fil.json
+++ b/app/client/src/locales/fil.json
@@ -2,56 +2,56 @@
   "Home": "Home",
   "Browse": "Browse",
   "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
+  "Tracks": "Mga kanta",
+  "Playlists": "Mga playlist",
+  "Albums": "Mga album",
+  "Artists": "Mga artista",
   "More": "More",
   "Settings": "Settings",
-  "Downloads": "Downloads",
+  "Downloads": "Mga download",
   "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
   "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
+  "Add to library": "Idagdag sa library",
+  "Download": "I-download",
   "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
+  "tracks": "mga kanta",
+  "Quality": "Kalidad",
+  "Estimated size:": "Tinantyang laki:",
+  "Start downloading": "Simulan ang download",
+  "Cancel": "I-kansel",
+  "Stream logging is disabled!": "Naka-disable ang stream logging!",
   "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
   "History": "History",
-  "Create new playlist": "Create new playlist",
+  "Create new playlist": "Gumawa ng bagong playlist",
   "TRACKS": "TRACKS",
   "Sort by": "Sort by",
   "Date Added": "Date Added",
   "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
+  "Artist (A-Z)": "Artista (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
   "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
+  "Create playlist": "Gumawa ng playlist",
+  "Create": "Gumawa",
+  "Add to playlist": "Idagdag sa playlist",
+  "Create new": "Gumawa ng bago",
+  "Remove": "Tanggalin",
+  "Play next": "I-play ang kasunod",
+  "Add to queue": "Idagdag sa queue",
+  "Remove from library": "Tanggalin sa library",
+  "Remove from playlist": "Tanggalin mula sa playlist",
   "Play track mix": "Play track mix",
-  "Go to": "Go to",
+  "Go to": "Pumunta sa",
   "Track Mix": "Track Mix",
   "Duration": "Duration",
   "Released": "Released",
   "Disk": "Disk",
-  "albums": "albums",
+  "albums": "Mga album",
   "Play top": "Play top",
-  "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
+  "Radio": "Radyo",
+  "Show all albums": "Ipakita lahat ng album",
+  "Show all singles": "Ipakita ang lahat ng mga single",
   "Show more": "Show more",
-  "Downloaded": "Downloaded",
+  "Downloaded": "Mga na-download",
   "Queue": "Queue",
   "Total": "Total",
   "Stop": "Stop",
@@ -67,46 +67,58 @@
   "Source": "Source",
   "ID": "ID",
   "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Please try again later, or try another account.": "Paki-subukan ulit mamaya, o mag-try ng ibang account.",
+  "Logout": "Mag-logout",
+  "Login using browser": "Mag-login gamit ang browser",
+  "Please login using your Deezer account:": "Paki-login ang iyong Deezer account:",
+  "...or paste your ARL/Token below:": "...o ilagay ang iyong ARL/Token sa baba:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
+  "Login": "Mag-login",
+  "By using this program, you disagree with Deezer's ToS.": "Sa paggamit ng program na ito, ikaw ay hindi sumasang-ayon sa ToS ng Deezer.",
+  "Only in Electron version!": "Sa Electron version lamang!",
+  "Search results for:": "Maghanap ng resulta para sa:",
+  "Error loading data!": "May problema habang naglo-load ng mga datos!",
+  "Try again later!": "Paki-subukan ulit mamaya!",
+  "Search": "Maghanap",
+  "Streaming Quality": "Kalidad ng streaming",
+  "Download Quality": "Kalidad ng download",
+  "Downloads Directory": "Lalagyan ng mga download",
+  "Simultaneous downloads": "Sabay-sabay na download",
+  "Always show download confirm dialog before downloading.": "Laging ipakita ang confirm dialog bago mag-download.",
+  "Show download dialog": "Ipakita ang download dialog",
+  "Create folders for artists": "Gumawa ng folder para sa mga artista",
+  "Create folders for albums": "Gumawa ng folder para sa mga album",
+  "Download lyrics": "I-download ang lyrics",
+  "Variables": "Mga variable",
   "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
+  "Show autocomplete in search": "Ipakita ang autocomplete sa search",
+  "Integrations": "Mga integration",
   "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
   "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "Connect your LastFM account to allow scrobbling.": "Ikabit ang iyong LastFM account para sa scrobbling.",
+  "Login with LastFM": "Mag-login gamit ang LastFM",
+  "Disconnect LastFM": "Tanggalin ang LastFM",
+  "Requires restart to apply!": "Kailangan i-restart para ma-apply!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "I-enable ang Discord Rich Presence, kailangan i-restart para mabago!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "I-enable ang Discord join button para sa pag-sync ng mga kanta, kailangan i-restart para mabago!",
   "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Other": "Iba pa",
+  "Minimize to tray": "I-minimize sa tray",
+  "Don't minimize to tray": "Huwag i-minimize sa tray",
+  "Close on exit": "Isara sa pag-pindot ng X",
+  "Settings saved!": "Na-save ang settings!",
+  "Available only in Electron version!": "Meron lamang sa Electron version!",
+  "Crossfade (ms)": "Crossfade (ms)",
+  "Select primary color": "Select primary color",
+  "Light theme": "Light theme",
+  "Create folders for playlists": "Create folders for playlists",
+  "About": "About",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram Releases",
+  "Telegram Group": "Telegram Group",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android Group",
+  "Credits:": "Credits:",
+  "Agree": "Agree"
 }
