--- a/app/client/src/locales/id.json
+++ b/app/client/src/locales/id.json
@@ -1,112 +1,124 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
+  "Home": "Beranda",
+  "Browse": "Telusuri",
+  "Library": "Koleksi",
+  "Tracks": "Lagu",
+  "Playlists": "Daftar Putar",
+  "Albums": "Album",
+  "Artists": "Artis",
+  "More": "Lebih banyak",
+  "Settings": "Pengaturan",
+  "Downloads": "Unduhan",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Cari atau tempel URL Deezer. Gunakan \"/\" untuk fokus dengan cepat.",
+  "Play": "Putar",
+  "Add to library": "Tambahkan ke koleksi",
+  "Download": "Unduh",
+  "fans": "penggemar",
+  "tracks": "lagu",
+  "Quality": "Kualitas",
+  "Estimated size:": "Perkiraan ukuran:",
+  "Start downloading": "Mulai mengunduh",
+  "Cancel": "Batalkan",
+  "Stream logging is disabled!": "Catatan pemutaran di nonaktifkan!",
+  "Enable it in settings for history to work properly.": "Aktifkan di pengaturan agar riwayat berfungsi dengan benar.",
+  "History": "Riwayat",
+  "Create new playlist": "Buat daftar putar baru",
+  "TRACKS": "LAGU",
+  "Sort by": "Urut berdasarkan",
+  "Date Added": "Tanggal Ditambahkan",
+  "Name (A-Z)": "Nama (A-Z)",
+  "Artist (A-Z)": "Artis (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
+  "Error loading lyrics or lyrics not found!": "Gagal memuat lirik atau lirik tidak tersedia!",
+  "Create playlist": "Buat daftar putar",
+  "Create": "Buat",
+  "Add to playlist": "Tambahkan ke daftar putar",
+  "Create new": "Buat baru",
+  "Remove": "Hapus",
+  "Play next": "Putar selanjutnya",
+  "Add to queue": "Tambahkan ke antrean",
+  "Remove from library": "Hapus dari koleksi",
+  "Remove from playlist": "Hapus dari daftar putar",
+  "Play track mix": "Putar lagu campuran",
+  "Go to": "Pergi ke",
+  "Track Mix": "Lagu Campuran",
+  "Duration": "Durasi",
+  "Released": "Dirilis",
   "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
+  "albums": "album",
+  "Play top": "Mainkan populer",
   "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
+  "Show all albums": "Tampilkan semua album",
+  "Show all singles": "Tampilkan semua single",
+  "Show more": "Tampilkan lebih banyak",
+  "Downloaded": "Terunduh",
+  "Queue": "Antrean",
+  "Total": "Jumlah",
+  "Stop": "Berhenti",
+  "Start": "Mulai",
+  "Show folder": "Tampilkan folder",
+  "Clear queue": "Bersihkan antrean",
+  "Playing from": "Memainkan dari",
   "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Lyrics": "Lirik",
+  "Track number": "Nomor lagu",
+  "Disk number": "Nomor disk",
+  "Explicit": "Eksplisit",
+  "Source": "Sumber",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Error logging in!": "Gagal masuk!",
+  "Please try again later, or try another account.": "Coba lagi nanti, atau coba akun lain.",
+  "Logout": "Keluar",
+  "Login using browser": "Masuk menggunakan browser",
+  "Please login using your Deezer account:": "Silakan masuk menggunakan akun Deezer anda:",
+  "...or paste your ARL/Token below:": "...atau tempelkan ARL/Token dibawah ini:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
+  "Login": "Masuk",
+  "By using this program, you disagree with Deezer's ToS.": "Dengan menggunakan program ini, kamu tidak setuju dengan ToS Deezer.",
+  "Only in Electron version!": "Hanya dalam versi Electron!",
+  "Search results for:": "Hasil pencarian untuk:",
+  "Error loading data!": "Gagal memuat data!",
+  "Try again later!": "Coba lagi nanti!",
+  "Search": "Cari",
+  "Streaming Quality": "Kualitas pemutaran",
+  "Download Quality": "Kualitas unduhan",
+  "Downloads Directory": "Folder Unduhan",
+  "Simultaneous downloads": "Unduhan serentak",
+  "Always show download confirm dialog before downloading.": "Selalu tampilkan dialog konfirmasi unduhan sebelum mengunduh.",
+  "Show download dialog": "Tampilkan dialog unduhan",
+  "Create folders for artists": "Buat folder untuk artis",
+  "Create folders for albums": "Buat folder untuk album",
+  "Download lyrics": "Unduh lirik",
+  "Variables": "Variabel",
   "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "Show autocomplete in search": "Tampilkan isi otomatis di pencarian",
+  "Integrations": "Integrasi",
+  "This allows listening history, flow and recommendations to work properly.": "Hal ini memungkinkan riwayat mendengarkan, aliran, dan rekomendasi berfungsi dengan baik.",
+  "Log track listens to Deezer": "Catat aktifitas mendengarkan lagu ke Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Hubungkan ke akun LastFM mu untuk mengijinkan scrobbling.",
+  "Login with LastFM": "Masuk dengan LastFM",
+  "Disconnect LastFM": "Putuskan LastFM",
+  "Requires restart to apply!": "Mulai ulang untuk menerapkan!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Aktifkan Discord Rich Presence, perlu dimulai ulang untuk beralih!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Aktifkan tombol bergabung Discord untuk menyinkronkan lagu, perlu dimulai ulang untuk beralih!",
+  "Discord Join Button": "Tombol Bergabung Discord",
+  "Other": "Lainnya",
+  "Minimize to tray": "Minimalkan ke Tray",
+  "Don't minimize to tray": "Jangan minimalkan ke tray",
+  "Close on exit": "Tutup saat keluar",
+  "Settings saved!": "Pengaturan tersimpan!",
+  "Available only in Electron version!": "Hanya tersedia di versi Electron!",
+  "Crossfade (ms)": "Crossfade (ms)",
+  "Select primary color": "Select primary color",
+  "Light theme": "Light theme",
+  "Create folders for playlists": "Create folders for playlists",
+  "About": "About",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram Releases",
+  "Telegram Group": "Telegram Group",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android Group",
+  "Credits:": "Credits:",
+  "Agree": "Agree"
 }
