--- a/app/client/src/locales/it.json
+++ b/app/client/src/locales/it.json
@@ -1,112 +1,124 @@
 {
   "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
+  "Browse": "Sfoglia",
+  "Library": "Libreria",
+  "Tracks": "Brani",
+  "Playlists": "Playlist",
+  "Albums": "Album",
+  "Artists": "Artisti",
+  "More": "Altro",
+  "Settings": "Impostazioni",
+  "Downloads": "Download",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Cerca qui o incolla un URL di Deezer. Usa \"/\" per mettere a fuoco questa barra.",
   "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
+  "Add to library": "Aggiungi alla libreria",
+  "Download": "Scarica",
+  "fans": "fan",
+  "tracks": "brani",
+  "Quality": "Qualità",
+  "Estimated size:": "Dimensione stimata:",
+  "Start downloading": "Inizia il download",
+  "Cancel": "Annulla",
+  "Stream logging is disabled!": "Il logging delle stream è disabilitato!",
+  "Enable it in settings for history to work properly.": "Abilitalo nelle impostazioni per permettere alla cronologia di funzionare correttamente.",
+  "History": "Cronologia",
+  "Create new playlist": "Crea una playlist",
+  "TRACKS": "BRANI",
+  "Sort by": "Ordina per",
+  "Date Added": "Data di aggiunta",
+  "Name (A-Z)": "Nome (A-Z)",
+  "Artist (A-Z)": "Artista (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
+  "Error loading lyrics or lyrics not found!": "Errore nel caricare i testi o testi non trovati!",
+  "Create playlist": "Crea playlist",
+  "Create": "Crea",
+  "Add to playlist": "Aggiungi a playlist",
+  "Create new": "Crea nuova",
+  "Remove": "Rimuovi",
+  "Play next": "Riproduci subito dopo",
+  "Add to queue": "Aggiungi alla coda",
+  "Remove from library": "Rimuovi dalla libreria",
+  "Remove from playlist": "Rimuovi dalla playlist",
+  "Play track mix": "Riproduci mix di brani",
+  "Go to": "Vai a",
+  "Track Mix": "Mix Di Tracce",
+  "Duration": "Durata",
+  "Released": "Data di uscita",
+  "Disk": "Disco",
+  "albums": "album",
+  "Play top": "Riproduci dall'inizio",
   "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
+  "Show all albums": "Mostra tutti gli album",
+  "Show all singles": "Mostra tutti i singoli",
+  "Show more": "Mostra di più",
+  "Downloaded": "Scaricato",
+  "Queue": "Coda",
+  "Total": "Totale",
   "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Start": "Avvia",
+  "Show folder": "Mostra cartella",
+  "Clear queue": "Pulisci la coda",
+  "Playing from": "Riproduzione da",
+  "Info": "Informazioni",
+  "Lyrics": "Testo",
+  "Track number": "Numero della traccia",
+  "Disk number": "Numero del disco",
+  "Explicit": "Esplicito",
+  "Source": "Fonte",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Error logging in!": "Errore durante il login!",
+  "Please try again later, or try another account.": "Riprova più tardi, o prova un altro account.",
+  "Logout": "Disconnettiti",
+  "Login using browser": "Accedi utilizzando il browser",
+  "Please login using your Deezer account:": "Effettua il login usando il tuo account Deezer:",
+  "...or paste your ARL/Token below:": "...o incolla il tuo ARL/Token qui sotto:",
   "ARL/Token": "ARL/Token",
   "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "By using this program, you disagree with Deezer's ToS.": "Utilizzando questo programma, non sei d'accordo con il ToS di Deezer.",
+  "Only in Electron version!": "Solo nella versione Electron!",
+  "Search results for:": "Risultati della ricerca per:",
+  "Error loading data!": "Errore nel caricamento dei dati!",
+  "Try again later!": "Riprova più tardi!",
+  "Search": "Cerca",
+  "Streaming Quality": "Qualità Streaming",
+  "Download Quality": "Qualità Download",
+  "Downloads Directory": "Cartella Download",
+  "Simultaneous downloads": "Download simultanei",
+  "Always show download confirm dialog before downloading.": "Mostra sempre la conferma di download prima di scaricare.",
+  "Show download dialog": "Mostra finestra di download",
+  "Create folders for artists": "Crea cartelle per gli artisti",
+  "Create folders for albums": "Crea cartelle per gli album",
+  "Download lyrics": "Scarica testo",
+  "Variables": "Variabili",
+  "UI": "Interfaccia",
+  "Show autocomplete in search": "Mostra elenco autocompletamento",
+  "Integrations": "Integrazioni",
+  "This allows listening history, flow and recommendations to work properly.": "Questo permette di usare la cronologia, il Flow e le raccomandazioni per funzionare correttamente.",
+  "Log track listens to Deezer": "Registra gli ascolti delle tracce a Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Collega il tuo account LastFM per consentire lo scrobbling.",
+  "Login with LastFM": "Accedi con LastFM",
+  "Disconnect LastFM": "Disconnetti LastFM",
+  "Requires restart to apply!": "Richiede un riavvio!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Abilita Discord Rich Presence, richiede il riavvio!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!"
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Abilita il pulsante \"join\" di Discord per sincronizzare le tracce, richiede il riavvio!",
+  "Discord Join Button": "Pulsante Unisciti di Discord",
+  "Other": "Altro",
+  "Minimize to tray": "Minimizza ad icona",
+  "Don't minimize to tray": "Non minimizzare a icona",
+  "Close on exit": "Chiudi all'uscita",
+  "Settings saved!": "Impostazioni salvate!",
+  "Available only in Electron version!": "Disponibile solo nella versione Electron!",
+  "Crossfade (ms)": "Dissolvenza (ms)",
+  "Select primary color": "Select primary color",
+  "Light theme": "Light theme",
+  "Create folders for playlists": "Create folders for playlists",
+  "About": "About",
+  "Links:": "Links:",
+  "Telegram Releases": "Telegram Releases",
+  "Telegram Group": "Telegram Group",
+  "Discord": "Discord",
+  "Telegram Android Group": "Telegram Android Group",
+  "Credits:": "Credits:",
+  "Agree": "Agree"
 }
